# libproj4

./: README.md
geodesic-1.0/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
geodesic-1.0/src/: Makefile.am  Makefile.in  config.h  config.h.in  geodesic.c  geodesic.ggo  geodesic.h  geodesic_cmd.c  geodesic_cmd.h  lines.c  node.c  set_ellps.c
libproj4/: Makefile  README  lib_proj.h  proj_aitoff.c  proj_eck3.c  proj_eqc.c  proj_etmerc.c  proj_fc-loerr.c  proj_ftmerc.c  proj_gbtmerc.c  proj_gdinverse.c  proj_gstmerc.c  proj_guyou.c  proj_hammer.c  proj_hill.c  proj_imw_p.c  proj_init.c  proj_ktmerc.c  proj_lcc.c  proj_list.h  proj_no_name.c  proj_psi.c  proj_siemon4.c  proj_tmerc.c  proj_translate.c  proj_zpoly1.c
libproject-1.01/: AUTHORS  ChangeLog  Makefile.in  README  configure  configure.ac
libproject-1.01/src/: Makefile.am  Makefile.in  config.h  config.h.in  proj_adjlon.c  proj_aea.c  proj_aeqd.c  proj_airy.c  proj_aitoff.c  proj_ardn_cls.c  proj_armadillo.c  proj_august.c  proj_auth.c  proj_bacon.c  proj_baker.c  proj_baranyi.c  proj_baranyi4.c  proj_bipc.c  proj_boggs.c  proj_bonne.c  proj_braun2.c  proj_casecmp.c  proj_cass.c  proj_cc.c  proj_cea.c  proj_collg.c  proj_crast.c  proj_cubic.c  proj_cyl_stere.c  proj_denoy.c  proj_deriv.c  proj_dms2rad.c  proj_dummy.c  proj_eck1.c  proj_eck2.c  proj_eck3.c  proj_eck4.c  proj_eck5.c  proj_eisen.c  proj_ell_set.c  (+122 more)
source/: Makefile
sproj-1.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
sproj-1.0/src/: Makefile.am  Makefile.in  config.h  config.h.in  sproj.c  sproj.ggo  sproj_cmd.c  sproj_cmd.h
