include_HEADERS = project.h

lib_LTLIBRARIES = libproject.la

noinst_HEADERS = proj_list.h config.h

libproject_la_LDFLAGS = -version-info 1:1:1 $(ALDFLAG) $(BLDFLAG)

libproject_la_SOURCES = \
	project.h proj_list.h config.h \
	proj_adjlon.c proj_aea.c proj_aeqd.c proj_airy.c proj_aitoff.c \
	proj_ardn_cls.c proj_armadillo.c proj_august.c \
	proj_auth.c proj_bacon.c proj_baker.c proj_baranyi4.c proj_baranyi.c \
	proj_bipc.c proj_boggs.c proj_bonne.c proj_braun2.c proj_casecmp.c \
	proj_cass.c proj_cc.c proj_cea.c proj_collg.c proj_crast.c \
	proj_cubic.c proj_cyl_stere.c proj_denoy.c proj_deriv.c proj_dms2rad.c \
	proj_dummy.c proj_eck1.c proj_eck2.c proj_eck3.c proj_eck4.c \
	proj_eck5.c proj_eisen.c proj_ellps.c proj_ell_set.c proj_eqc.c \
	proj_eqdc.c proj_equi_moll.c proj_erdi_ksz.c proj_err_list.c \
	proj_errno.c proj_etmerc.c proj_factors.c proj_fahey.c proj_fc-loerr.c \
	proj_fouc_s.c proj_four1.c proj_four2.c proj_ftmerc.c proj_fwd.c \
	proj_gauss.c proj_gbtmerc.c proj_gdinverse.c proj_geos.c \
	proj_gforward.c proj_gilbert.c proj_gins8.c proj_ginverse.c \
	proj_gnom.c proj_gn_sinu.c proj_goode.c proj_gstmerc.c proj_guyou.c \
	proj_hammer.c proj_hatano.c proj_hill.c proj_holzel.c proj_imw_p.c \
	proj_in_fwd.c proj_in_inv.c proj_init.c proj_inv.c proj_kocc.c \
	proj_ktmerc.c proj_labrd.c proj_laea.c proj_lagrng.c proj_larr.c \
	proj_lask.c proj_lcca.c proj_lcc.c proj_list.c proj_loxim.c \
	proj_lph2xyz.c proj_lsat.c proj_maurer.c proj_mayr.c proj_mbtfpp.c \
	proj_mbtfpq.c proj_mbt_fps.c proj_mcb_s3.c proj_mdist.c proj_merc.c \
	proj_mill_2.c proj_mill.c proj_mill_per.c proj_mod_ster.c proj_moll.c \
	proj_msfn.c proj_ncasecmp.c proj_nell.c proj_nell_h.c proj_nocol.c \
	proj_nsper.c proj_nzmg.c proj_ob_tran.c proj_ocea.c proj_oea.c \
	proj_omerc.c proj_ortho.c proj_oxford.c proj_param.c proj_phi2.c \
	proj_poly.c proj_psi.c proj_pt_fwd.c proj_pt_inv.c proj_putp2.c \
	proj_putp3.c proj_putp4p.c proj_putp5.c proj_putp6.c proj_rad2dms.c \
	proj_robin.c proj_rouss.c proj_rpoly.c proj_sconics.c proj_semiconf.c \
	proj_siemon4.c proj_s_min_err.c proj_somerc.c proj_sp_fwd.c \
	proj_sp_inv.c proj_sterea.c proj_stere.c proj_strerrno.c \
	proj_strerror_r.c proj_sts.c proj_tcc.c proj_tcea.c proj_tmerc.c \
	proj_tob_g1.c proj_tob_sqr.c proj_tpeqd.c proj_trans.c proj_translate.c \
	proj_trapez.c proj_tsfn.c proj_units.c proj_urm5.c proj_urmfps.c \
	proj_vandg2.c proj_vandg4.c proj_vandg.c proj_wag2.c proj_wag3.c \
	proj_wag5.c proj_wag7.c proj_wag9.c proj_wink1.c proj_winks.c \
	proj_xyz2lph.c proj_zpoly1.c proj_primes.c
